--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Stylesheet, Google Font & Icon Link Added  -->
+        <!-- Stylesheet, Google Font Link Added  -->
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@500&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+            <!-- font-awesome Icon Link added -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         <link rel="icon" href="Calculator.png">
-        <title>Calculator: That Makes Maths Easy</title>
+        <title>Calculator: Makes Your Life Easier</title>
     </head>
 
     <body>
         <div class="calculator">
+            <div class="calculator-header">
+                <i class="fa-solid fa-calculator"></i>
+                <h1>Calculator</h1>
+            </div>
             <input type="text" placeholder="0" id="input-box">
             <div class="button">
                 <button class="operator">AC</button>
-                <button class="operator"><span class="material-symbols-outlined backspace">backspace</span></button>
+                <button class="operator">DEL</button>
                 <button class="operator">%</button>
                 <button class="operator">/</button>
             </div>
