--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="button">
                 <button class="operator">AC</button>
                 <button class="operator">DEL</button>
-                <button class="operator">%</button>
+                <button class="operator" id="percent-btn">%</button>
                 <button class="operator">/</button>
             </div>
             <div class="button">
