--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <link rel="icon" href="https://github.com/rahulkhandait-sde/Calculator/blob/master/Calculator.png">
+        <link rel="icon" href="Calculator.png">
         <title>Calculator: Makes Your Life Easier</title>
     </head>
 
