--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <button class="equal-btn">=</button>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="app.js"></script>
     </body>
 
 </html>
